# icell

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
icell/: Cargo.toml
icell/src/: core.rs  generative.rs  hlist.rs  immovable.rs  lib.rs  runtime.rs  scoped.rs  typeid.rs  typeid_tl.rs
icell/src/hlist/: seal.rs
icell/src/runtime/: builder.rs
icell/tests/: compile_fail.rs  generative_cell.rs  immovable_cell.rs  runtime_cell.rs  type_cell.rs  type_tl_cell.rs
icell/tests/compile_fail/generative/: distinct_lifetimes.rs  distinct_lifetimes.stderr  outlives-1.rs  outlives-2.rs  outlives-2.stderr
icell/tests/compile_fail/immovable/: outlives-1.rs  outlives-2.rs
icell/tests/compile_fail/runtime/: outlives-1.rs  outlives-2.rs  outlives-2.stderr
icell/tests/compile_fail/scoped/: distinct_lifetimes-1.rs  distinct_lifetimes-1.stderr  distinct_lifetimes-2.rs  distinct_lifetimes-2.stderr  outlives-1.rs  outlives-1.stderr  outlives-2.rs
icell/tests/compile_fail/typeid/: distinct_types.rs  distinct_types.stderr  outlives-1.rs  outlives-2.rs
icell/tests/compile_fail/typeid-tl/: distinct_types.rs  distinct_types.stderr  outlives-1.rs  outlives-1.stderr  outlives-2.rs
